...
fun App() {
    val isDarkTheme = isSystemInDarkTheme()

    MaterialTheme(
        colorScheme = if (isDarkTheme) PlexDarkColorScheme else PlexLightColorScheme
    ) {
        Box(modifier = Modifier.testTag("plex_main_screen")) {
            AppNavigation()
        }
    }
}
